# Groupy

./: .gitignore  PACKAGING_SIZE_REPORT.md  README.md  REFACTORING_PLAN.md  RELEASE_CHECKLIST.md  pyproject.toml  setup.py  xyz_succeed.txt
.github/workflows/: ci.yml
Groupy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
doc/: groupy.html  search.js
doc/groupy/: gp_calculator.html  gp_convertor.html  gp_counter.html  gp_generator.html  gp_loader.html  gp_tool.html  gp_viewer.html
document/: GCmanual.md  Groupy_manual.md
gp_3x_test_mol/: 3018_with_error_smiles.txt  C1CCCC1C.mol  SMILES.txt  SMILES_count_result.csv  SMILES_with_error.txt  test_mol.rar
gp_3x_test_mol/test_file/: C1CCCC1.mol2  CC20.xyz  CC7.xyz
groupy/: __init__.py  api.py  chem.py  cli.py  example.ipynb  exceptions.py  gp_3x_calculator.py  gp_3x_convertor.py  gp_3x_counter.py  gp_3x_generator.py  gp_3x_loader.py  gp_3x_mpirun.py  gp_3x_viewer.py  gp_calculator.py  gp_convertor.py  gp_counter.py  gp_generator.py  gp_loader.py  gp_tool.py  gp_viewer.py  groupy_main.py  io.py  setup.py
groupy/document/: GCmanual.md
groupy/gp_3x_internal_data/: group_contribution_parameters.xlsx
groupy/gp_3x_test_mol/: 1006.xlsx  3018.txt  3018_with_error_smiles.txt  C1CCCC1C.xyz  batch_calculate_results.csv  test_mol.kdx  test_xyz.rar  time_used.txt
groupy/gui/: __init__.py  __main__.py  app.py
manual/: Groupy_manual.md  USER_MANUAL_en.md  USER_MANUAL_zh.md  example.ipynb
scripts/: build_windows_app.py  groupy_gui_entry.py
src/: gp_3x_counter.py  gp_3x_loader.py  gp_3x_tool.py
test_doc/: groupy.html  index.html  search.js
test_doc/groupy/: gp_3x_convertor.html  (+12 more)
tests/: test_smoke.py
(+806 files in other folders)
