[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Groupy"
version = "3.0.0"
description = "Groupy -- A Useful Tool for Molecular Analysis"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ruichen Liu", email = "1197748182@qq.com" },
]
dependencies = [
    "joblib",
    "numpy",
    "openpyxl",
    "pandas",
    "rdkit",
    "tqdm",
]

[project.optional-dependencies]
convert = []
gui = [
    "PySide6",
]
package = [
    "PyInstaller",
]
viewer = [
    "ase",
]
dev = [
    "build",
    "pytest",
]

[project.scripts]
Groupy = "groupy.cli:main"
Groupy-GUI = "groupy.gui:main"

[project.urls]
Homepage = "https://github.com/47-5/Groupy"

[tool.setuptools.packages.find]
include = ["groupy*"]

[tool.setuptools.package-data]
groupy = ["*.xlsx"]
